fixing the marquee problem and scrollbar

--- a/theme/styles/layouts.css
+++ b/theme/styles/layouts.css
@@ -21,7 +21,7 @@ html {
 }
 
 .slidev-page {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .slidev-layout {
